adding to register forms

--- a/views/customer_login.html
+++ b/views/customer_login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="login-form">
+  <div class="customer login-form">
     <form action="/submit-your-login-form" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
