--- a/views/staff_register.html
+++ b/views/staff_register.html
@@ -6,6 +6,19 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="register-form">
+    <form action="/submit-your-login-form" method="post">
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required>
+
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+
+      <label for="password">Confirm Password:</label>
+      <input type="password" id="confirm-password" name="password" required>
+
+      <input type="submit" value="Register">
+    </form>
+  </div>
 </body>
 </html>
