--- a/views/staff_login.html
+++ b/views/staff_login.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="login-form">
+  <div class="staff login-form">
     <form action="/submit-your-login-form" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
