added more to logins

--- a/views/staff_register.html
+++ b/views/staff_register.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="register-form">
+  <div class="staff register-form">
     <form action="/submit-your-login-form" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
