--- a/views/customer_register.html
+++ b/views/customer_register.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="register-form">
+  <div class="customer register-form">
     <form action="/submit-your-login-form" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
@@ -16,7 +16,7 @@
 
       <label for="password">Confirm Password:</label>
       <input type="password" id="confirm-password" name="password" required>
-      
+
       <input type="submit" value="Register">
     </form>
   </div>
