--- a/views/customer_login.html
+++ b/views/customer_login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style src="views\customer_login.css"></style>
+  <link rel="stylesheet" href="customer_login.css"></link>
   <title>Document</title>
 </head>
 
