Testing zafs updates

--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  
+  <h1>Customer</h1>
+  <p>Click the appropriate button below to either <b>log in</b> to your account or <b>register</b> as a new customer</p>
+  <button type="button"><b>Log in(customer)</b></button>
+  <button type="button"><b>Register(customer)</b></button>
+  <hr>
+  <h1>Staff</h1>
+  <p>Click the appropriate button below to either <b>log in</b> or <b>register</b> as a new staff</p>
+  <button type="button"><b>Log in(Staff)</b></button>
+  <button type="button"><b>Register(Staff)</b></button>
 </body>
+
 </html>
