Changed how the log in page looks like

--- a/views/index.html
+++ b/views/index.html
@@ -8,15 +8,20 @@
 </head>
 
 <body>
-  <h1>Customer</h1>
-  <p>Click the appropriate button below to either <b>log in</b> to your account or <b>register</b> as a new customer</p>
-  <button type="button"><b>Log in(customer)</b></button>
-  <button type="button"><b>Register(customer)</b></button>
-  <hr>
-  <h1>Staff</h1>
-  <p>Click the appropriate button below to either <b>log in</b> or <b>register</b> as a new staff</p>
-  <button type="button"><b>Log in(Staff)</b></button>
-  <button type="button"><b>Register(Staff)</b></button>
+  <div style="width: 100%;">
+    <div style="width: 50%; height: 100px; float: left; background: green;"> 
+      <h1>Customer</h1>
+      <p>Click the appropriate button below to either <b>log in</b> to your account or <b>register</b> as a new customer</p>
+      <button type="button"><b>Log in(customer)</b></button>
+      <button type="button"><b>Register(customer)</b></button> 
+    </div>
+    <div style="margin-left: 50%; height: 100px; background: blue;"> 
+      <h1>Staff</h1>
+      <p>Click the appropriate button below to either <b>log in</b> or <b>register</b> as a new staff</p>
+      <button type="button"><b>Log in(Staff)</b></button>
+      <button type="button"><b>Register(Staff)</b></button>
+    </div>
+</div> 
 </body>
 
 </html>
