added to readme, as well as added styling

--- a/views/customer_login.html
+++ b/views/customer_login.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css"></link>
   <title>Document</title>
 </head>
 
 <body>
-  <div class="staff login-form">
+  <h1>Customer Login Form</h1>
+  <div class="customer login-form">
     <form action="/submit-your-login-form" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
