--- a/views/customer_register.html
+++ b/views/customer_register.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="customer_login.css"></link>
+  <link rel="stylesheet" href="styles.css"></link>
   <title>Document</title>
+  
 </head>
-
 <body>
-  <div class="customer login-form">
+  <h1>Custotomer Registration Form</h1>
+  <div class="customer register-form">
     <form action="/submit-your-login-form" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
@@ -17,9 +17,11 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
 
-      <input type="submit" value="Login">
+      <label for="password">Confirm Password:</label>
+      <input type="password" id="confirm-password" name="password" required>
+
+      <input type="submit" value="Register">
     </form>
   </div>
 </body>
-
 </html>
