--- a/views/index.html
+++ b/views/index.html
@@ -4,18 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css"></link>
   <title>Document</title>
 </head>
 
 <body>
-  <div style="width: 100%;">
-    <div style="width: 50%; height: 100px; float: left; background: green;"> 
+  <h1>Databases Final Project Home</h1>
+  <div>
+    <!-- style="width: 50%; height: 100px; float: left; background: green;" -->
+    <div> 
       <h1>Customer</h1>
       <p>Click the appropriate button below to either <b>log in</b> to your account or <b>register</b> as a new customer</p>
       <button type="button"><b>Log in(customer)</b></button>
       <button type="button"><b>Register(customer)</b></button> 
     </div>
-    <div style="margin-left: 50%; height: 100px; background: blue;"> 
+    <div>
+      <!-- style="margin-left: 50%; height: 100px; background: blue;"  -->
       <h1>Staff</h1>
       <p>Click the appropriate button below to either <b>log in</b> or <b>register</b> as a new staff</p>
       <button type="button"><b>Log in(Staff)</b></button>
