--- a/templates/customer_login.html
+++ b/templates/customer_login.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css"></link>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}"></link>
   <title>Document</title>
-  
 </head>
+
 <body>
-  <h1>Custotomer Registration Form</h1>
-  <div class="customer register-form">
+  <h1>Customer Login Form</h1>
+  <div class="customer login-form">
     <form action="/submit-your-login-form" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
@@ -17,11 +18,9 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
 
-      <label for="password">Confirm Password:</label>
-      <input type="password" id="confirm-password" name="password" required>
-
-      <input type="submit" value="Register">
+      <input type="submit" value="Login">
     </form>
   </div>
 </body>
+
 </html>
