--- a/templates/staff_login.html
+++ b/templates/staff_login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css"></link>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}"></link>
   <title>Document</title>
 </head>
 
@@ -22,5 +22,5 @@
     </form>
   </div>
 </body>
-
+<script src="script.js"></script>
 </html>
