--- a/templates/staff_register.html
+++ b/templates/staff_register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css"></link>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}"></link>
   <title>Document</title>
 </head>
 <body>
