made working customer view

--- a/templates/customer_login.html
+++ b/templates/customer_login.html
@@ -21,6 +21,9 @@
       <input type="submit" value="Login">
     </form>
   </div>
+  <form method="get" action="/">
+    <button type="submit">Go Back Home</button>
+  </form>
 </body>
 
 </html>
