--- a/templates/customer_register.html
+++ b/templates/customer_register.html
@@ -24,5 +24,8 @@
       <input type="submit" value="Register">
     </form>
   </div>
+  <form method="get" action="/">
+    <button type="submit">Go Back Home</button>
+  </form>
 </body>
 </html>
