--- a/templates/staff_register.html
+++ b/templates/staff_register.html
@@ -22,5 +22,8 @@
       <input type="submit" value="Register">
     </form>
   </div>
+  <form method="get" action="/">
+    <button type="submit">Go Back Home</button>
+  </form>
 </body>
 </html>
