created working flights view

--- a/templates/view_customers.html
+++ b/templates/view_customers.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Customer Information</title>
-  <style src="tables.css"></style>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='tables.css') }}">
 </head>
 <body>
   <h1>Customer Information</h1>
