--- a/templates/staff_login.html
+++ b/templates/staff_login.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Staff Login Form</h1>
   <div class="staff login-form">
-    <form action="/submit-your-login-form" method="post">
+    <form action="/staffLoginPost" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
 
