--- a/templates/add_airplane.html
+++ b/templates/add_airplane.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Add Airplane</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}"></link>
+  <meta charset="UTF-8">
+  <title>Add Airplane</title>
 </head>
 <body>
-  <h1>Add Airplane</h1>
+  <h1 style="color: blue; text-align: center;">Add Airplane</h1>
   <form action="/add_airplane" method="post">
-    <label for="airplane_id">Airplane ID:</label>
-    <input type="text" id="airplane_id" name="airplane_id">
-    
-    <label for="manufacturing_company">Manufacturing Company:</label>
-    <input type="text" id="manufacturing_company" name="manufacturing_company">
-    
-    <label for="manufacturing_date">Manufacturing Date:</label>
-    <input type="date" id="manufacturing_date" name="manufacturing_date">
-    
-    <label for="number_of_seats">Number of Seats:</label>
-    <input type="number" id="number_of_seats" name="number_of_seats">
-    
-    <label for="model_number">Model Number:</label>
-    <input type="text" id="model_number" name="model_number">
-    
-    <label for="airline_name">Airline Name:</label>
-    <input type="text" id="airline_name" name="airline_name">
-    
-    <button type="submit">Add Airplane</button>
+  <label for="airplane_id">Airplane ID:</label>
+  <input type="text" id="airplane_id" name="airplane_id">
+  
+  <label for="manufacturing_company">Manufacturing Company:</label>
+  <input type="text" id="manufacturing_company" name="manufacturing_company">
+  
+  <label for="manufacturing_date">Manufacturing Date:</label>
+  <input type="date" id="manufacturing_date" name="manufacturing_date">
+  
+  <label for="number_of_seats">Number of Seats:</label>
+  <input type="number" id="number_of_seats" name="number_of_seats">
+  
+  <label for="model_number">Model Number:</label>
+  <input type="text" id="model_number" name="model_number">
+  
+  <label for="airline_name">Airline Name:</label>
+  <input type="text" id="airline_name" name="airline_name">
+  
+  <button type="submit" style="background-color: green; color: white;">Add Airplane</button>
   </form>
-</body>
 </body>
 </html>
