--- a/templates/staff_home.html
+++ b/templates/staff_home.html
@@ -36,15 +36,15 @@
 <body>
     <div class="container">
         <h1>Airline Staff Dashboard</h1>
-        <a href="/view_flights" class="button">View Flights</a>
-        <a href="/create_flight" class="button">Create New Flight</a>
-        <a href="/change_flight_status" class="button">Change Flight Status</a>
-        <a href="/add_airplane" class="button">Add Airplane</a>
-        <a href="/add_airport" class="button">Add Airport</a>
-        <a href="/view_ratings" class="button">View Flight Ratings</a>
-        <a href="/schedule_maintenance" class="button">Schedule Maintenance</a>
-        <a href="/view_frequent_customers" class="button">View Frequent Customers</a>
-        <a href="/view_revenue" class="button">View Earned Revenue</a>
+        <a href="/flights" class="button">View Flights</a>
+        <a href="/create-flight" class="button">Create New Flight</a>
+        <a href="/change-flight-status" class="button">Change Flight Status</a>
+        <a href="/add-airplane" class="button">Add Airplane</a>
+        <a href="/add-airport" class="button">Add Airport</a>
+        <a href="/view-ratings" class="button">View Flight Ratings</a>
+        <a href="/schedule-maintenance" class="button">Schedule Maintenance</a>
+        <a href="/view-frequent-customers" class="button">View Frequent Customers</a>
+        <a href="/view-revenue" class="button">View Earned Revenue</a>
         <a href="/logout" class="button">Logout</a>
     </div>
 </body>
