--- a/templates/staff_register.html
+++ b/templates/staff_register.html
@@ -81,6 +81,11 @@
       <label for="airline-name">Airline Name:</label>
       <input type="text" id="airline-name" name="airline-name" required>
 
+      <label for="email-address">Email Address:</label>
+      <input type="email" id="email-address" name="email-address" required>
+
+      <label for="phone-number">Phone Number:</label>
+      <input type="tel" id="phone-number" name="phone-number" required>
       <input type="submit" value="Register">
     </form>
   </div>
