--- a/templates/add_airplane.html
+++ b/templates/add_airplane.html
@@ -8,22 +8,22 @@
   <h1 style="color: blue; text-align: center;">Add Airplane</h1>
   <form action="/add_airplane" method="post">
   <label for="airplane_id">Airplane ID:</label>
-  <input type="text" id="airplane_id" name="airplane_id">
+  <input type="text" id="airplane_id" name="airplane_id" required>
   
   <label for="manufacturing_company">Manufacturing Company:</label>
-  <input type="text" id="manufacturing_company" name="manufacturing_company">
+  <input type="text" id="manufacturing_company" name="manufacturing_company" required>
   
   <label for="manufacturing_date">Manufacturing Date:</label>
-  <input type="date" id="manufacturing_date" name="manufacturing_date">
+  <input type="date" id="manufacturing_date" name="manufacturing_date" required>
   
   <label for="number_of_seats">Number of Seats:</label>
-  <input type="number" id="number_of_seats" name="number_of_seats">
+  <input type="number" id="number_of_seats" name="number_of_seats" required>
   
   <label for="model_number">Model Number:</label>
-  <input type="text" id="model_number" name="model_number">
+  <input type="text" id="model_number" name="model_number" required>
   
   <label for="airline_name">Airline Name:</label>
-  <input type="text" id="airline_name" name="airline_name">
+  <input type="text" id="airline_name" name="airline_name" required>
   
   <button type="submit" style="background-color: green; color: white;">Add Airplane</button>
   </form>
