--- a/templates/change_status.html
+++ b/templates/change_status.html
@@ -14,6 +14,7 @@
         <select id="new_status" name="new_status">
             <option value="on_time">On Time</option>
             <option value="delayed">Delayed</option>
+            <option value="cancelled">Cancelled</option>
         </select>
         
         <button type="submit">Update Status</button>
