--- a/templates/customer_register.html
+++ b/templates/customer_register.html
@@ -60,25 +60,25 @@
   <div class="customer register-form">
     <form action="/" method="post">
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="emailAddress" required>
 
       <label for="first_name">First Name:</label>
-      <input type="text" id="first_name" name="first_name" required>
+      <input type="text" id="first_name" name="firstName" required>
 
       <label for="last_name">Last Name:</label>
-      <input type="text" id="last_name" name="last_name" required>
+      <input type="text" id="last_name" name="lastName" required>
 
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
 
       <label for="building_number">Building Number:</label>
-      <input type="text" id="building_number" name="building_number">
+      <input type="text" id="building_number" name="buildingNumber">
 
       <label for="street_name">Street Name:</label>
-      <input type="text" id="street_name" name="street_name">
+      <input type="text" id="street_name" name="streetName">
 
       <label for="apartment_number">Apartment Number:</label>
-      <input type="text" id="apartment_number" name="apartment_number">
+      <input type="text" id="apartment_number" name="apartmentNumber">
 
       <label for="city">City:</label>
       <input type="text" id="city" name="city">
@@ -100,6 +100,9 @@
 
       <label for="date_of_birth">Date of Birth:</label>
       <input type="date" id="date_of_birth" name="date_of_birth">
+
+      <label for="phone_number">Phone Number:</label>
+      <input type="text" id="phone_number" name="phoneNumber">
 
       <input type="submit" value="Register">
     </form>
