--- a/templates/view_airports.html
+++ b/templates/view_airports.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>View Airports</title>
@@ -9,24 +10,33 @@
             border-collapse: collapse;
             margin-top: 20px;
         }
-        table, th, td {
+
+        table,
+        th,
+        td {
             border: 1px solid #ddd;
         }
-        th, td {
+
+        th,
+        td {
             padding: 8px;
             text-align: left;
         }
+
         th {
             background-color: #f2f2f2;
         }
+
         tr:nth-child(even) {
             background-color: #f9f9f9;
         }
+
         tr:hover {
             background-color: #f1f1f1;
         }
     </style>
 </head>
+
 <body>
     <h1>Airports Information</h1>
     <table>
@@ -54,7 +64,7 @@
         </tbody>
     </table>
     <form action="/add-airport" method="get">
-      <button id="add_aiport" type="submit"><b>Add Airport</b></button>
+        <button id="add_aiport" type="submit"><b>Add Airport</b></button>
     </form>
 </body>
 </html>
