--- a/templates/add_airport.html
+++ b/templates/add_airport.html
@@ -21,7 +21,7 @@
         <input type="text" id="country" name="airport_country" required>
 
         <label for="terminals">Terminals:</label>
-        <input type="number" id="terminals" name="terminals" required>
+        <input type="number" id="terminals" name="terminal" required>
         
         <button type="submit">Add Airport</button>
     </form>
