--- a/templates/customer_register.html
+++ b/templates/customer_register.html
@@ -58,7 +58,7 @@
 <body>
   <h1>Customer Registration Form</h1>
   <div class="customer register-form">
-    <form action="/" method="post">
+    <form action="/customer-register" method="post">
       <label for="email">Email:</label>
       <input type="email" id="email" name="emailAddress" required>
 
