--- a/templates/staff_register.html
+++ b/templates/staff_register.html
@@ -59,7 +59,7 @@
 <body>
   <h1>Staff Registration Form</h1>
   <div class="staff register-form">
-    <form action="/submit-your-login-form" method="post">
+    <form action="/staff-register" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
 
@@ -86,6 +86,7 @@
 
       <label for="phone-number">Phone Number:</label>
       <input type="tel" id="phone-number" name="phone-number" required>
+      
       <input type="submit" value="Register">
     </form>
   </div>
