--- a/templates/customer_login.html
+++ b/templates/customer_login.html
@@ -64,7 +64,7 @@
 <body>
   <h1>Customer Login Form</h1>
   <div class="customer login-form">
-    <form action="/submit-your-login-form" method="post">
+    <form action="/customer-home" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
 
