--- a/templates/add_airplane.html
+++ b/templates/add_airplane.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1 style="color: blue; text-align: center;">Add Airplane</h1>
-  <form action="/add_airplane" method="post">
+  <form action="/add-airplane" method="post">
   <label for="airplane_id">Airplane ID:</label>
   <input type="text" id="airplane_id" name="airplane_id" required>
   
