--- a/templates/add_airport.html
+++ b/templates/add_airport.html
@@ -13,6 +13,9 @@
         
         <label for="airport_name">Airport Name:</label>
         <input type="text" id="airport_name" name="airport_name" required>
+
+        <label for="airport_type">Airport Type:</label>
+        <input type="text" id="airport_type" name="airport_type" required>
         
         <label for="city">City:</label>
         <input type="text" id="city" name="airport_city" required>
