--- a/templates/change_status.html
+++ b/templates/change_status.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Change Flight Status</h1>
-    <form action="/change_status" method="post">
+    <form action="/change-flight-status" method="post">
         <label for="flight_id">Flight ID:</label>
         <input type="text" id="flight_id" name="flight_id">
         
