--- a/templates/create_flights.html
+++ b/templates/create_flights.html
@@ -41,7 +41,7 @@
 </head>
 <body>
   <h1>Create New Flight</h1>
-  <form action="/create_flight" method="post">
+  <form action="/create-flight" method="post">
     <label for="flight_number">Flight Number:</label>
     <input type="text" id="flight_number" name="flight_number">
     
