--- a/templates/staff_login.html
+++ b/templates/staff_login.html
@@ -64,7 +64,7 @@
 <body>
   <h1>Staff Login Form</h1>
   <div class="staff login-form">
-    <form action="/staffLoginPost" method="post">
+    <form action="/staff-login" method="post">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
 
