--- a/templates/view_flights_customer.html
+++ b/templates/view_flights_customer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>View Flights</h1>
-    <form action="/flights-customer" method="post">
+    <form action="/flights" method="post">
         <label for="start_date">Start Date:</label>
         <input type="date" id="start_date" name="start_date">
         
