--- a/templates/create_flight.html
+++ b/templates/create_flight.html
@@ -21,8 +21,7 @@
       margin-bottom: 5px;
     }
     
-    input[type="text"],
-    input[type="datetime-local"] {
+    input{
       width: 200px;
       padding: 5px;
       border: 1px solid #ccc;
@@ -42,6 +41,9 @@
 <body>
   <h1>Create New Flight</h1>
   <form action="/create-flight" method="post">
+    <label for="airline">Your Airline:</label>
+    <input type="text" id="airline" name="airline">
+
     <label for="flight_number">Flight Number:</label>
     <input type="text" id="flight_number" name="flight_number">
     
@@ -54,12 +56,21 @@
     <label for="arrival_airport">Arrival Airport:</label>
     <input type="text" id="arrival_airport" name="arrival_airport">
     
+    <label for="departure_date">Departure Date:</label>
+    <input type="date" id="departure_date" name="departure_date">
+
     <label for="departure_time">Departure Time:</label>
-    <input type="datetime-local" id="departure_time" name="departure_time">
+    <input type="time" id="departure_time" name="departure_time">
     
+    <label for="arrival_date">Arrival Date:</label>
+    <input type="date" id="arrival_date" name="arrival_date">
+
     <label for="arrival_time">Arrival Time:</label>
-    <input type="datetime-local" id="arrival_time" name="arrival_time">
+    <input type="time" id="arrival_time" name="arrival_time">
     
+    <label for="price">Price of Ticket:</label>
+    <input type="number" step="0.01" id="price" name="price">
+
     <button type="submit">Create Flight</button>
   </form>
 </body>
