another flights push

--- a/templates/staff_home.html
+++ b/templates/staff_home.html
@@ -36,7 +36,7 @@
 <body>
     <div class="container">
         <h1>Airline Staff Dashboard</h1>
-        <a href="/flights" class="button">View Flights</a>
+        <a href="/flights-staff" class="button">View Flights</a>
         <a href="/create-flight" class="button">Create New Flight</a>
         <a href="/change-flight-status" class="button">Change Flight Status</a>
         <a href="/add-airplane" class="button">Add Airplane</a>
