--- a/templates/customer_home.html
+++ b/templates/customer_home.html
@@ -9,8 +9,8 @@
 <body>
   <div class="dashboard-container">
       <h2>Customer Dashboard</h2>
-      <a href="/view_my_flights" class="dashboard-link">View My Flights</a>
-      <a href="/search_flights" class="dashboard-link">Search for Flights</a>
+      <a href="/flights" class="dashboard-link">View My Flights</a>
+      <!-- you can search for flights in the flights tab -->
       <a href="/purchase_tickets" class="dashboard-link">Purchase Tickets</a>
       <a href="/cancel_trip" class="dashboard-link">Cancel Trip</a>
       <a href="/give_feedback" class="dashboard-link">Rate and Comment on Flights</a>
