successfully tested code

--- a/templates/customer_rating.html
+++ b/templates/customer_rating.html
@@ -58,7 +58,7 @@
 <body>
   <h1>Customer review Form</h1>
   <div class="customer review-form">
-    <form action="/customer-review" method="post">
+    <form action="/ratings" method="post">
       <label for="email">Email:</label>
       <input type="email" id="email" name="Email" required>
 
