added date check for ratings

--- a/templates/customer_rating.html
+++ b/templates/customer_rating.html
@@ -59,17 +59,20 @@
   <h1>Customer review Form</h1>
   <div class="customer review-form">
     <form action="/ratings" method="post">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="Email" required>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="Email" required>
 
-      <label for="ticketID">TicketID:</label>
-      <input type="text" id="ticketID" name="ticketID" required>
+    <label for="ticketID">TicketID:</label>
+    <input type="text" id="ticketID" name="ticketID" required>
 
-      <label for="rating">Rating:</label>
-      <input type="text" id="rating" name="Rating" required>
+    <label for="rating">Rating:</label>
+    <input type="text" id="rating" name="Rating" required>
 
-      <label for="comment">Comment:</label>
-      <input type="text" id="comment" name="Comment" required>
+    <label for="comment">Comment:</label>
+    <input type="text" id="comment" name="Comment" required>
+
+    <label for="flightDate">Enter a date:</label>
+    <input type="date" id="flightDate" name="flightDate">
 
         <input type="submit" value="Register">
     </form>
