added flights to main page too

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,6 +89,13 @@
       <form action="/staff-register" method="get">
         <button id="staff_register" type="submit"><b>Register (Staff)</b></button>
       </form>
+      
+    </div>
+    <div>
+      <h1>Access for Everyone:</h1>
+      <form action="/flights" method="get">
+        <button id="flights" type="submit"><b>View Flights</b></button>
+      </form>
     </div>
   </div>
 </body>
