reroute to /spending works

--- a/templates/customer_home.html
+++ b/templates/customer_home.html
@@ -14,7 +14,7 @@
       <a href="/purchase_tickets" class="dashboard-link">Purchase Tickets</a>
       <a href="/cancel_trip" class="dashboard-link">Cancel Trip</a>
       <a href="/ratings" class="dashboard-link">Rate and Comment on Flights</a>
-      <a href="/track_spending" class="dashboard-link">Track My Spending</a>
+      <a href="/spending" class="dashboard-link">Track My Spending</a>
       <a href="/logout" class="dashboard-link">Logout</a>
   </div>
 </body>
