trying request.args.get

--- a/templates/staff_home.html
+++ b/templates/staff_home.html
@@ -44,7 +44,7 @@
         <a href="/view-ratings" class="button">View Flight Ratings</a>
         <a href="/schedule-maintenance" class="button">Schedule Maintenance</a>
         <a href="/view-frequent-customers" class="button">View Frequent Customers</a>
-        <a href="/view-revenue" class="button">View Earned Revenue</a>
+        <a href="/revenue" class="button">View Earned Revenue</a>
         <a href="/logout" class="button">Logout</a>
     </div>
 </body>
