made changes to airline name

--- a/templates/revenue.html
+++ b/templates/revenue.html
@@ -9,7 +9,7 @@
     <h1>Earned Revenue</h1>
     
     <form action="/revenue" method="get">
-        Enter/Select Flight Name: 
+        Enter/Select Airline Name: 
         <input type="text" name="flightName" required>
         <button type="submit">Filter Revenue</button>
     </form>
