--- a/templates/spending.html
+++ b/templates/spending.html
@@ -26,7 +26,7 @@
         <button type="submit">View Spending</button>
     </form>
 
-    {% if range_total is not None %}
+    {% if range_total is not none %}
     <h2>Total Spending for Selected Range: ${{ range_total }}</h2>
     <h3>Monthly Spending Within Range:</h3>
     <ul>
