--- a/templates/view_flights_customer.html
+++ b/templates/view_flights_customer.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>View and Manage Flights</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='tables.css') }}">
 </head>
+
 <body>
     <h1>View Flights</h1>
     <form action="/flights" method="post">
         <label for="start_date">Start Date:</label>
         <input type="date" id="start_date" name="start_date">
-        
+
         <label for="end_date">End Date:</label>
         <input type="date" id="end_date" name="end_date">
-        
+
         <label for="source">Source Airport/City:</label>
         <input type="text" id="source" name="source">
-        
+
         <label for="destination">Destination Airport/City:</label>
         <input type="text" id="destination" name="destination">
-        
+
         <button type="submit">Search Flights</button>
     </form>
-    
+
     <h1>Flight Information</h1>
     <table>
         <thead>
@@ -38,6 +40,7 @@
                 <th>ID</th>
                 <th>Base Price</th>
                 <th>Status</th>
+                <th>Purchase</th>
             </tr>
         </thead>
         <tbody>
@@ -54,9 +57,13 @@
                 <td>{{ flight.ID }}</td>
                 <td>{{ flight.basePrice }}</td>
                 <td>{{ flight.status }}</td>
+                <td>
+                    <button onclick="location.href='purchase_url/{{ flight.ID }}'">Purchase</button>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </body>
+
 </html>
