added view reviews

--- a/templates/staff_home.html
+++ b/templates/staff_home.html
@@ -41,11 +41,11 @@
         <a href="/change-flight-status" class="button">Change Flight Status</a>
         <a href="/add-airplane" class="button">Add Airplane</a>
         <a href="/add-airport" class="button">Add Airport</a>
-        <a href="/view-ratings" class="button">View Flight Ratings</a>
+        <a href="/staff-ratings" class="button">View Flight Ratings</a>
         <a href="/schedule-maintenance" class="button">Schedule Maintenance</a>
         <a href="/view-frequent-customers" class="button">View Frequent Customers</a>
         <a href="/revenue" class="button">View Earned Revenue</a>
-        <a href="/logout" class="button">Logout</a>
+        <a href="/logout-staff" class="button">Logout</a>
     </div>
 </body>
 </html>
