--- a/templates/customer_home.html
+++ b/templates/customer_home.html
@@ -11,7 +11,7 @@
       <h2>Customer Dashboard</h2>
       <a href="/flights" class="dashboard-link">View My Flights</a>
       <!-- you can search for flights in the flights tab -->
-      <a href="/purchase_tickets" class="dashboard-link">Purchase Tickets</a>
+      <a href="/purchase" class="dashboard-link">Purchase Tickets</a>
       <a href="/cancel_trip" class="dashboard-link">Cancel Trip</a>
       <a href="/ratings" class="dashboard-link">Rate and Comment on Flights</a>
       <a href="/spending" class="dashboard-link">Track My Spending</a>
